GH-1743 remove unused simulation modbus devices